--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 body {
-  background: url("./assets/bg.avif");
+  background: url("./assets/bnr1.png");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
